--- a/configs/stable-diffusion/catgame.yaml
+++ b/configs/stable-diffusion/catgame.yaml
@@ -72,13 +72,14 @@ model:
 data:
   target: main.DataModuleFromConfig
   params:
-    batch_size: 4
-    num_workers: 4
+    batch_size: 2
+    num_workers: 16
     num_val_workers: 0 # Avoid a weird val dataloader issue
     train:
       target: ldm.data.simple.hf_dataset
       params:
         name: samnm/catgame
+        use_auth_token: True
         image_transforms:
         - target: torchvision.transforms.Resize
           params:
